syntax = "proto3";

option go_package = "/pb/upvote;pb_upvote";

message NewUpvote {
  string serviceId = 1;
  string userId = 2;
  string vote = 3;
  string comment = 4;
}

message Upvote {
  string upvoteId = 1;
  string serviceId = 2;
  string userId = 3;
  string vote = 4;
  string comment = 5;
}

message FilterUpvote {
  string type = 1;
}

message Upvotes {
  repeated Upvote upvotes = 1;
}

message UpvoteId {
  string upvoteId = 1;
}

message EmptyUpvote {
  bool return = 1;
}

message ServiceId {
  string serviceId = 1;
}

message ScoreResponse {
  int32 upvotes = 1;
  int32 downvotes = 2;
  int32 score = 3;
}

service UpvoteService {
  rpc Create (NewUpvote) returns (Upvote) {}
  rpc Read (FilterUpvote) returns (Upvotes) {}
  rpc ReadById (UpvoteId) returns (Upvote) {}
  rpc Update (Upvote) returns (EmptyUpvote) {}
  rpc Delete (UpvoteId) returns (EmptyUpvote) {}
  rpc Score (ServiceId) returns (ScoreResponse) {}
}

// command to create pb:
// protoc --go_out=. --go-grpc_out=. proto/upvote.proto